@@ -982,8 +982,10 @@ libbalsa_address_get_edit_widget(LibBalsaAddress *address,
             GtkWidget *tree_view;
 
             entries[cnt] = lba_addr_list_widget(changed_cb, changed_data);
-            gtk_box_pack_start(GTK_BOX(box), label, FALSE, FALSE, 1);
-            gtk_box_pack_start(GTK_BOX(box), but,   FALSE, FALSE, 1);
+            g_object_set(label, "margin", 1, NULL);
+            gtk_box_pack_start(GTK_BOX(box), label, FALSE, FALSE, 0);
+            g_object_set(but, "margin", 1, NULL);
+            gtk_box_pack_start(GTK_BOX(box), but,   FALSE, FALSE, 0);
             lhs = box;
             tree_view = gtk_bin_get_child(GTK_BIN(entries[cnt]));
             g_signal_connect(but, "clicked", G_CALLBACK(add_row), tree_view);
