@@ -859,7 +859,6 @@ libbalsa_html_new(LibBalsaMessageBody * body,
                      G_CALLBACK(lbh_context_menu_cb), info);
 
     vbox = gtk_box_new(GTK_ORIENTATION_VERTICAL, 0);
-    gtk_box_pack_end(GTK_BOX(vbox), GTK_WIDGET(info->web_view), TRUE, TRUE, 0);
 
     /* Simple check for possible resource requests: */
     if (have_src_oth && !auto_load_ext_content) {
@@ -867,6 +866,10 @@ libbalsa_html_new(LibBalsaMessageBody * body,
         gtk_box_pack_start(GTK_BOX(vbox), info->info_bar, FALSE, FALSE, 0);
         g_debug("%s shows info_bar", __func__);
     }
+
+    gtk_widget_set_vexpand(GTK_WIDGET(info->web_view), TRUE);
+    gtk_widget_set_valign(GTK_WIDGET(info->web_view), GTK_ALIGN_FILL);
+    gtk_box_pack_start(GTK_BOX(vbox), GTK_WIDGET(info->web_view), FALSE, FALSE, 0);
 
     webkit_web_view_load_html(info->web_view, text, NULL);
     g_free(text);
